移除媒體專區頁文章列表的議題連結

--- a/press/index.html.slim
+++ b/press/index.html.slim
@@ -11,7 +11,7 @@
             .post-meta
               .date 2015.7.22
               ul.post-category
-                li.post-category-item: a href="/categories/show.html" 政策
+                li.post-category-item: span 政策
                 // 若出現兩者以上議題的架構
                 / li.post-category-item: a href="/categories/show.html" 活動
                 / li.post-category-item: a href="/categories/show.html" 故事
