--- a/sass/partial/_post.scss
+++ b/sass/partial/_post.scss
@@ -61,33 +61,39 @@
 
   .post-meta {
     @include pie-clearfix;
-    @include leader(1);
-    @include trailer(0.5);
-    @include adjust-font-size-to(15px, 5/6);
+    @include leader(0.25);
+    @include trailer(0.75);
+    @include adjust-font-size-to(13px);
+    text-align: center;
   }
 
   .post-date {
-    float: left;
-    margin-right: 12px;
-    color: #a9a9a9;
+    display: inline-block;
+    color: #999;
   }
 
-  .post-tag-title {
-    float: left;
-    color: #a9a9a9;
+  .post-date + .post-tag {
+    &:before {
+      content: '|';
+      margin: 0 9px;
+      color: #ddd;
+    }
   }
 
   .post-tag {
-    float: left;
+    display: inline-block;
     margin-right: 6px;
-    color: #a9a9a9;
+    color: #999;
     &:hover {
       color: #444;
       text-decoration: none;
     }
     &:after {
       content: ',';
-      color: #a9a9a9;
+      color: #999;
+    }
+    &:last-child {
+      margin-right: 0;
     }
     &:last-child:after {
       display: none;
@@ -113,17 +119,19 @@
 
   .post-share-title {
     display: inline-block;
-    @include adjust-font-size-to(15px);
-    margin-right: 6px;
+    @include adjust-font-size-to(13px);
+    margin-right: 3px;
+    color: #999;
   }
   .post-share-btn {
     @include adjust-font-size-to(18px);
     display: inline-block;
     vertical-align: bottom;
-    margin: 0 6px;
+    margin-right: 9px;
     color: #999;
     &.icon-line {
-      margin-left: 3px;
+      // margin-left: 3px;
+      margin-right: 0;
     }
     &:hover {
       color: #444;
@@ -155,12 +163,9 @@
       @include adjust-font-size-to(18px);
     }
     .post-meta {
-      @include leader(1.6);
-      @include trailer(1);
+      @include leader(0.5);
+      @include trailer(1.75);
       @include adjust-font-size-to(16px);
-    }
-    .post-date {
-      margin-right: 24px;
     }
     .post-footer {
       @include leader(2);
