--- a/posts/single-post-page.html.slim
+++ b/posts/single-post-page.html.slim
@@ -43,7 +43,7 @@
       .aside-post-list
         - 3.times do |i|
           a.aside-post href="#"
-            img.aside-post-img src="http://placehold.it/300x200"
+            .aside-post-img style="background-image: url('http://placehold.it/300x200')"
             h4.aside-post-title= zh_lorem_sentence
             .aside-post-meta
               span.date 2015.7.22
