--- a/sass/partial/_content.scss
+++ b/sass/partial/_content.scss
@@ -1,8 +1,20 @@
 .content {
+  .anchor {
+    padding-top: 24px;
+    margin-top: -24px;
+  }
   @include at-breakpoint($desktop) {
     padding-top: 61px;
+    .anchor {
+      padding-top: 61px + 24px;
+      margin-top: -(61px + 24px);
+    }
     &.has-sub-menu {
       padding-top: 110px;
+      .anchor {
+        padding-top: 110px + 24px;
+        margin-top: -(110px + 24px);
+      }
     }
   }
 }
