--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -632,8 +632,11 @@ body { background-color: #183840; position: relative; }
   .post-list_block-style .post-title { font-size: 24px; line-height: 30px; }
   .post-list_block-style .post-summary { font-size: 16px; line-height: 27px; } }
 
+.content .anchor { padding-top: 24px; margin-top: -24px; }
 @media (min-width: 1025px) { .content { padding-top: 61px; }
-  .content.has-sub-menu { padding-top: 110px; } }
+  .content .anchor { padding-top: 85px; margin-top: -85px; }
+  .content.has-sub-menu { padding-top: 110px; }
+  .content.has-sub-menu .anchor { padding-top: 134px; margin-top: -134px; } }
 
 .site-info { display: none; }
 @media (min-width: 1025px) { .site-info { padding: 24px 0; text-align: center; }
@@ -717,8 +720,8 @@ body { background-color: #183840; position: relative; }
 .post .post-category li { display: inline-block; margin: 0 3px; }
 .post .post-category a { display: block; font-size: 15px; line-height: 18px; font-weight: bold; color: #FEFF86; }
 .post .post-category a:hover { text-decoration: none; }
-.post .post-title { margin-bottom: 6px; font-size: 24px; line-height: 30px; font-weight: bold; color: white; }
-.post .post-subtitle { color: white; font-size: 13px; line-height: 18px; margin-bottom: 0px; }
+.post .post-title { font-size: 24px; line-height: 30px; margin-bottom: 0px; font-weight: bold; color: white; }
+.post .post-subtitle { color: white; margin-top: 6px; margin-bottom: 0px; font-size: 13px; line-height: 18px; }
 .post .post-meta { margin-top: 6px; margin-bottom: 18px; font-size: 13px; line-height: 24px; text-align: center; }
 .post .post-meta:after { content: ""; display: table; clear: both; }
 .post .post-date { display: inline-block; color: #999; }
@@ -742,8 +745,8 @@ body { background-color: #183840; position: relative; }
 .post .post-fb-like { display: block; margin: 0 auto; margin-top: 12px; }
 @media (min-width: 640px) { .post .post-header { padding: 28% 10% 48px; margin-bottom: 48px; }
   .post .post-category a { display: block; font-size: 18px; line-height: 24px; }
-  .post .post-title { margin: 6px 0 12px; font-size: 32px; line-height: 36px; }
-  .post .post-subtitle { font-size: 18px; line-height: 24px; }
+  .post .post-title { margin: 6px 0 0; font-size: 32px; line-height: 36px; }
+  .post .post-subtitle { margin-top: 12px; font-size: 18px; line-height: 24px; }
   .post .post-meta { margin-top: 12px; margin-bottom: 42px; font-size: 16px; line-height: 24px; }
   .post .post-footer { margin-top: 48px; padding-bottom: 48px; }
   .post .post-share-title { font-size: 16px; line-height: 24px; } }
@@ -770,7 +773,7 @@ body { background-color: #183840; position: relative; }
 .aside-posts .aside-posts-title { margin-bottom: 24px; padding-bottom: 8px; font-size: 18px; line-height: 24px; color: black; border-bottom: 2px solid #50b584; font-weight: bold; }
 .aside-posts .aside-post { display: block; color: #444; margin-bottom: 24px; }
 .aside-posts .aside-post:hover { text-decoration: none; }
-.aside-posts .aside-post-img { display: block; margin-bottom: 6px; width: 100%; }
+.aside-posts .aside-post-img { display: block; margin-bottom: 6px; width: 100%; padding-top: 67%; height: 0; background-repeat: no-repeat; background-position: center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
 .aside-posts .aside-post-title { font-size: 15px; line-height: 20px; margin-bottom: 0px; color: #444; }
 .aside-posts .aside-post-meta { display: block; font-size: 15px; line-height: 20px; color: #aaa; }
 .aside-posts .aside-post-meta .post-category { margin: 0; padding: 0; border: 0; list-style: none; display: inline-block; }
