add back to top button

--- a/_layout.html.slim
+++ b/_layout.html.slim
@@ -10,6 +10,7 @@ html lang="zh-TW"
         .page-inner
           = yield
           .page-bottom-illustrator
+          = render "/partial/back-to-top"
         = render "/partial/site-info"
       = render "/partial/footer"
 
