--- a/sass/all.scss
+++ b/sass/all.scss
@@ -34,6 +34,7 @@
 @import "partial/article";
 @import "partial/comments";
 @import "partial/aside-posts";
+@import "partial/back-to-top";
 
 
 // ==== page ====
