--- a/sass/partial/_back-to-top.scss
+++ b/sass/partial/_back-to-top.scss
@@ -22,6 +22,7 @@
     width: 48px;
     height: 48px;
     margin: 0 0 0 auto;
+    font-size: 15px;
     line-height: 48px;
     text-align: center;
     color: white;
