調整文章列表按鈕顏色

--- a/categories/show.html.slim
+++ b/categories/show.html.slim
@@ -1,4 +1,4 @@
-= render '/partial/homepage-header'
+= render '/partial/header'
 = render '/partial/sub-menu'
 
 .content.has-sub-menu
@@ -23,4 +23,4 @@
                 span.post-readmore 閱讀更多
 
       .pageaction
-        a.btn href="#" 載入更多文章
+        a.btn.btn_primary href="#" 載入更多文章
