--- a/press/index.html.slim
+++ b/press/index.html.slim
@@ -20,4 +20,4 @@
               p.post-summary 民主進步黨主席暨總統參選人蔡英文今(25)日下午至桃園連跑兩場行程，除前往祥儀機器人夢工廠及桃園市婦女館參訪，傍晚則是出席在地希望生活節，與民...
 
       .pageaction
-        a.btn href="#" 載入更多文章
+        a.btn.btn_primary href="#" 載入更多文章
