--- a/tags/index.html.slim
+++ b/tags/index.html.slim
@@ -4,7 +4,7 @@
 .content.has-sub-menu
   .post-list.post-list_block-style
     .container
-      h2.post-list-title= "標籤：#{zh_lorem_words(2)}"
+      h2.post-list-title= "關於「#{zh_lorem_words(2)}」的所有文章"
       .post-list-content
         - 6.times do |i|
           .post-item
@@ -23,4 +23,4 @@
                 span.post-readmore 閱讀更多
 
       .pageaction
-        a.btn href="#" 載入更多文章
+        a.btn.btn_primary href="#" 載入更多文章
