--- a/partial/_post-list.html.slim
+++ b/partial/_post-list.html.slim
@@ -18,4 +18,4 @@
               span.post-readmore 閱讀更多
 
     .pageaction
-      a.btn href="/posts/" 載入更多文章
+      a.btn.btn_primary href="/posts/" 閱讀更多文章
