--- a/posts/index.html.slim
+++ b/posts/index.html.slim
@@ -23,4 +23,4 @@
                 span.post-readmore 閱讀更多
 
       .pageaction
-        a.btn href="#" 載入更多文章
+        a.btn.btn_primary href="#" 載入更多文章
