--- a/404.html.slim
+++ b/404.html.slim
@@ -8,4 +8,4 @@
       h2.message-title 找不到亮點？
       h3.message-subtitle 404 Not Found.
       .message-action
-        a.btn.btn_primary 快回到點亮台灣
+        a.btn.btn_primary href="/" 快回到點亮台灣
