--- a/sass/page/_homepage.scss
+++ b/sass/page/_homepage.scss
@@ -35,7 +35,7 @@
       max-width: 1512px;
       width: 100%;
       margin: 0 auto;
-      @include transition(width .5s, opacity 0.75s 0.5s);
+      @include transition(opacity 0.75s 0.5s);
     }
     .sub-menu.sticky {
       margin-top: 61px;
@@ -48,7 +48,7 @@
     }
     .sticky {
       width: 90%;
-      @include transition(width 0s, opacity 0.75s 0.5s);
+      @include transition(opacity 0.75s 0.5s);
     }
   }
 }
