改進 scale-content 動畫

--- a/sass/partial/_scale-content.scss
+++ b/sass/partial/_scale-content.scss
@@ -93,7 +93,9 @@
       }
       .header, .sub-menu {
         @include opacity(0);
+        @include transition(opacity 0s);
       }
+
       .footer {
         .site {
           @include opacity(1);
