--- a/sass/partial/_back-to-top.scss
+++ b/sass/partial/_back-to-top.scss
@@ -8,13 +8,13 @@
   width: 100%;
   margin: 0 auto;
   opacity: 0;
-  @include transition(visibility 0s .5s, opacity .5s, bottom .5s);
+  @include transition(visibility 0s 0.5s, opacity 0.5s, bottom 0.5s);
 
   &.is-active {
     visibility: visible;
     opacity: 1;
     bottom: 24px;
-    @include transition(opacity .5s, bottom .5s, width .2s);
+    @include transition(opacity 0.5s 0.5s, bottom 0.5s 0.5s);
   }
 
   .back-to-top {
@@ -28,7 +28,7 @@
     color: white;
     background-color: rgba(#55B36C, .8);
     @include border-radius(3px 0 0 3px);
-    @include transition(background-color 0.5s, opacity 1s 0.5s);
+    @include transition(background-color 0.5s);
     &:hover {
       background-color: rgba(#55B36C, .6);
       text-decoration: none;
@@ -43,10 +43,8 @@
 }
 
 
-
 .is-scaled .back-to-top-wrap {
-  opacity: 0;
-  .back-to-top {
-    @include opacity(0);
-  }
+  @include opacity(0);
+  bottom: -48px;
+  @include transition(opacity 0s, bottom 0s);
 }
