--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -184,7 +184,7 @@ img { max-width: 100%; margin-bottom: 24px; }
 
 body { background-color: #183840; position: relative; }
 
-.page-outer { margin: 0 auto; max-width: 1512px; width: 100%; -webkit-transition: width 0.25s; -moz-transition: width 0.25s; -o-transition: width 0.25s; transition: width 0.25s; }
+.page-outer { margin: 0 auto; max-width: 1512px; width: 100%; }
 @media (min-width: 1512px) { .page-outer { width: 90%; } }
 
 .page-inner { background-color: #F7F7F7; }
@@ -470,7 +470,7 @@ body { background-color: #183840; position: relative; }
   .header .social-nav a { font-size: 22px; line-height: 48px; margin: 0 24px; }
   .header .social-nav a.icon-line { margin-left: 18px; } }
 @media (min-width: 1025px) { .header { position: fixed; left: 0; top: 0; right: 0; z-index: 300; margin: 0 auto; }
-  .header .header-inner { position: relative; -webkit-transition: width 0.5s; -moz-transition: width 0.5s; -o-transition: width 0.5s; transition: width 0.5s; }
+  .header .header-inner { position: relative; }
   .header .menu-btn { display: none; }
   .header .logo { position: relative; z-index: 300; }
   .header .menu { display: block; position: absolute; left: 0px; right: 0px; padding: 0 24px; overflow: visible; bottom: auto; visibility: visible; opacity: 1; background-color: transparent; -webkit-transition: none; -moz-transition: none; -o-transition: none; transition: none; }
@@ -519,8 +519,7 @@ body { background-color: #183840; position: relative; }
 .sub-menu li.active:after { content: ""; position: absolute; bottom: 9px; left: 50%; margin-left: -1px; border: 2px solid #50B584; -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; border-radius: 50%; }
 .sub-menu a { display: block; padding: 12px; color: #444444; text-decoration: none; }
 .sub-menu a:hover { color: #3e946a; }
-@media (min-width: 1025px) { .sub-menu { position: fixed; top: 61px; left: 0; right: 0; z-index: 300; margin: 0 auto; }
-  .sub-menu .sub-menu-inner { -webkit-transition: width 0.5s; -moz-transition: width 0.5s; -o-transition: width 0.5s; transition: width 0.5s; } }
+@media (min-width: 1025px) { .sub-menu { position: fixed; top: 61px; left: 0; right: 0; z-index: 300; margin: 0 auto; } }
 @media (min-width: 1512px) { .sub-menu .sub-menu-inner { width: 90%; } }
 
 .hero { padding-top: 60px; margin: 0 auto; }
@@ -690,7 +689,7 @@ body { background-color: #183840; position: relative; }
   .scale-content.is-scaled .page { -webkit-transition: -webkit-transform 0.5s; -moz-transition: -moz-transform 0.5s; -o-transition: -o-transform 0.5s; transition: transform 0.5s; }
   .scale-content.is-scaled .page-inner { -webkit-transform: scale(0.5); -moz-transform: scale(0.5); -ms-transform: scale(0.5); -o-transform: scale(0.5); transform: scale(0.5); -webkit-border-radius: 0 0 10px 10px; -moz-border-radius: 0 0 10px 10px; -ms-border-radius: 0 0 10px 10px; -o-border-radius: 0 0 10px 10px; border-radius: 0 0 10px 10px; -webkit-transition: -webkit-transform 0.5s, border-radius 0.5s; -moz-transition: -moz-transform 0.5s, border-radius 0.5s; -o-transition: -o-transform 0.5s, border-radius 0.5s; transition: transform 0.5s, border-radius 0.5s; }
   .scale-content.is-scaled .site-info { opacity: 1; -webkit-transition: opacity 1s; -webkit-transition-delay: 1s; -moz-transition: opacity 1s 1s; -o-transition: opacity 1s 1s; transition: opacity 1s 1s; }
-  .scale-content.is-scaled .header, .scale-content.is-scaled .sub-menu { opacity: 0; }
+  .scale-content.is-scaled .header, .scale-content.is-scaled .sub-menu { opacity: 0; -webkit-transition: opacity 0s; -moz-transition: opacity 0s; -o-transition: opacity 0s; transition: opacity 0s; }
   .scale-content.is-scaled .footer .site { opacity: 1; -webkit-transform: scale(1); -moz-transform: scale(1); -ms-transform: scale(1); -o-transform: scale(1); transform: scale(1); }
   .scale-content.is-scaled .footer:before { -webkit-transform: translate(0, 0) rotate(0deg); -moz-transform: translate(0, 0) rotate(0deg); -ms-transform: translate(0, 0) rotate(0deg); -o-transform: translate(0, 0) rotate(0deg); transform: translate(0, 0) rotate(0deg); -webkit-transition: 10s 0.5s; -moz-transition: 10s 0.5s; -o-transition: 10s 0.5s; transition: 10s 0.5s; }
   .scale-content.is-scaled .footer .footer-logo { opacity: 1; -webkit-transition: 3s 1s; -moz-transition: 3s 1s; -o-transition: 3s 1s; transition: 3s 1s; }
@@ -751,12 +750,13 @@ body { background-color: #183840; position: relative; }
   .post .post-meta { margin-top: 12px; margin-bottom: 42px; font-size: 16px; line-height: 24px; }
   .post .post-footer { margin-top: 48px; padding-bottom: 48px; }
   .post .post-share-title { font-size: 16px; line-height: 24px; } }
+@media (max-height: 640px) { .post .post-header { padding-top: 240px; } }
 
 .article .lead { margin-top: 0px; }
 .article h3 { margin-bottom: 24px; font-size: 21px; line-height: 24px; color: black; font-weight: bold; }
 .article h4 { margin-bottom: 24px; font-size: 16px; line-height: 24px; color: black; font-weight: bold; }
 .article b { color: black; font-weight: bold; }
-.article img { display: block; width: 100%; margin-bottom: 24px; }
+.article img, .article iframe { display: block; width: 100%; margin-bottom: 24px; }
 .article ul, .article ol { margin-top: 0px; font-size: 18px; line-height: 30px; }
 @media (min-width: 640px) { .article { font-size: 18px; line-height: 30px; }
   .article h3 { font-size: 24px; line-height: 28px; }
@@ -803,13 +803,12 @@ body { background-color: #183840; position: relative; }
   .message-block .message-action { margin-top: 48px; } }
 
 .back-to-top-wrap { visibility: hidden; display: block; position: fixed; bottom: -48px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; max-width: 1512px; width: 100%; margin: 0 auto; opacity: 0; -webkit-transition: visibility 0s, opacity 0.5s, bottom 0.5s; -webkit-transition-delay: 0.5s, 0s, 0s; -moz-transition: visibility 0s 0.5s, opacity 0.5s, bottom 0.5s; -o-transition: visibility 0s 0.5s, opacity 0.5s, bottom 0.5s; transition: visibility 0s 0.5s, opacity 0.5s, bottom 0.5s; }
-.back-to-top-wrap.is-active { visibility: visible; opacity: 1; bottom: 24px; -webkit-transition: opacity 0.5s, bottom 0.5s, width 0.2s; -moz-transition: opacity 0.5s, bottom 0.5s, width 0.2s; -o-transition: opacity 0.5s, bottom 0.5s, width 0.2s; transition: opacity 0.5s, bottom 0.5s, width 0.2s; }
-.back-to-top-wrap .back-to-top { display: block; width: 48px; height: 48px; margin: 0 0 0 auto; font-size: 15px; line-height: 48px; text-align: center; color: white; background-color: rgba(85, 179, 108, 0.8); -webkit-border-radius: 3px 0 0 3px; -moz-border-radius: 3px 0 0 3px; -ms-border-radius: 3px 0 0 3px; -o-border-radius: 3px 0 0 3px; border-radius: 3px 0 0 3px; -webkit-transition: background-color 0.5s, opacity 1s; -webkit-transition-delay: 0s, 0.5s; -moz-transition: background-color 0.5s, opacity 1s 0.5s; -o-transition: background-color 0.5s, opacity 1s 0.5s; transition: background-color 0.5s, opacity 1s 0.5s; }
+.back-to-top-wrap.is-active { visibility: visible; opacity: 1; bottom: 24px; -webkit-transition: opacity 0.5s, bottom 0.5s; -webkit-transition-delay: 0.5s, 0.5s; -moz-transition: opacity 0.5s 0.5s, bottom 0.5s 0.5s; -o-transition: opacity 0.5s 0.5s, bottom 0.5s 0.5s; transition: opacity 0.5s 0.5s, bottom 0.5s 0.5s; }
+.back-to-top-wrap .back-to-top { display: block; width: 48px; height: 48px; margin: 0 0 0 auto; font-size: 15px; line-height: 48px; text-align: center; color: white; background-color: rgba(85, 179, 108, 0.8); -webkit-border-radius: 3px 0 0 3px; -moz-border-radius: 3px 0 0 3px; -ms-border-radius: 3px 0 0 3px; -o-border-radius: 3px 0 0 3px; border-radius: 3px 0 0 3px; -webkit-transition: background-color 0.5s; -moz-transition: background-color 0.5s; -o-transition: background-color 0.5s; transition: background-color 0.5s; }
 .back-to-top-wrap .back-to-top:hover { background-color: rgba(85, 179, 108, 0.6); text-decoration: none; }
 @media (min-width: 1512px) { .back-to-top-wrap { width: 90%; } }
 
-.is-scaled .back-to-top-wrap { opacity: 0; }
-.is-scaled .back-to-top-wrap .back-to-top { opacity: 0; }
+.is-scaled .back-to-top-wrap { opacity: 0; bottom: -48px; -webkit-transition: opacity 0s, bottom 0s; -moz-transition: opacity 0s, bottom 0s; -o-transition: opacity 0s, bottom 0s; transition: opacity 0s, bottom 0s; }
 
 .homepage .header-sticky-wrapper { position: absolute; top: 0; left: 0; right: 0; }
 .homepage .header, .homepage .sub-menu { width: 100%; }
@@ -817,10 +816,10 @@ body { background-color: #183840; position: relative; }
 @media (min-width: 1025px) { .homepage .header-sticky-wrapper { position: static; }
   .homepage .header { position: static; }
   .homepage .sub-menu { position: static; }
-  .homepage .sticky { position: fixed; top: 0; left: 0; right: 0; z-index: 1000; max-width: 1512px; width: 100%; margin: 0 auto; -webkit-transition: width 0.5s, opacity 0.75s; -webkit-transition-delay: 0s, 0.5s; -moz-transition: width 0.5s, opacity 0.75s 0.5s; -o-transition: width 0.5s, opacity 0.75s 0.5s; transition: width 0.5s, opacity 0.75s 0.5s; }
+  .homepage .sticky { position: fixed; top: 0; left: 0; right: 0; z-index: 1000; max-width: 1512px; width: 100%; margin: 0 auto; -webkit-transition: opacity 0.75s; -webkit-transition-delay: 0.5s; -moz-transition: opacity 0.75s 0.5s; -o-transition: opacity 0.75s 0.5s; transition: opacity 0.75s 0.5s; }
   .homepage .sub-menu.sticky { margin-top: 61px; } }
 @media (min-width: 1512px) { .homepage .header-inner, .homepage .sub-menu-inner { width: 100%; }
-  .homepage .sticky { width: 90%; -webkit-transition: width 0s, opacity 0.75s; -webkit-transition-delay: 0s, 0.5s; -moz-transition: width 0s, opacity 0.75s 0.5s; -o-transition: width 0s, opacity 0.75s 0.5s; transition: width 0s, opacity 0.75s 0.5s; } }
+  .homepage .sticky { width: 90%; -webkit-transition: opacity 0.75s; -webkit-transition-delay: 0.5s; -moz-transition: opacity 0.75s 0.5s; -o-transition: opacity 0.75s 0.5s; transition: opacity 0.75s 0.5s; } }
 
 .article-page .page-header { margin-bottom: 24px; }
 @media (min-width: 640px) { .article-page .page-header { margin-bottom: 48px; } }
