--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -690,6 +690,7 @@ body { background-color: #183840; position: relative; }
   .scale-content.is-scaled .page-inner { -webkit-transform: scale(0.5); -moz-transform: scale(0.5); -ms-transform: scale(0.5); -o-transform: scale(0.5); transform: scale(0.5); -webkit-border-radius: 0 0 10px 10px; -moz-border-radius: 0 0 10px 10px; -ms-border-radius: 0 0 10px 10px; -o-border-radius: 0 0 10px 10px; border-radius: 0 0 10px 10px; -webkit-transition: -webkit-transform 0.5s, border-radius 0.5s; -moz-transition: -moz-transform 0.5s, border-radius 0.5s; -o-transition: -o-transform 0.5s, border-radius 0.5s; transition: transform 0.5s, border-radius 0.5s; }
   .scale-content.is-scaled .site-info { opacity: 1; -webkit-transition: opacity 1s; -webkit-transition-delay: 1s; -moz-transition: opacity 1s 1s; -o-transition: opacity 1s 1s; transition: opacity 1s 1s; }
   .scale-content.is-scaled .header, .scale-content.is-scaled .sub-menu { opacity: 0; -webkit-transition: opacity 0s; -moz-transition: opacity 0s; -o-transition: opacity 0s; transition: opacity 0s; }
+  .scale-content.is-scaled .back-to-top-wrap { opacity: 0; bottom: -48px; -webkit-transition: opacity 0s, bottom 0s; -moz-transition: opacity 0s, bottom 0s; -o-transition: opacity 0s, bottom 0s; transition: opacity 0s, bottom 0s; }
   .scale-content.is-scaled .footer .site { opacity: 1; -webkit-transform: scale(1); -moz-transform: scale(1); -ms-transform: scale(1); -o-transform: scale(1); transform: scale(1); }
   .scale-content.is-scaled .footer:before { -webkit-transform: translate(0, 0) rotate(0deg); -moz-transform: translate(0, 0) rotate(0deg); -ms-transform: translate(0, 0) rotate(0deg); -o-transform: translate(0, 0) rotate(0deg); transform: translate(0, 0) rotate(0deg); -webkit-transition: 10s 0.5s; -moz-transition: 10s 0.5s; -o-transition: 10s 0.5s; transition: 10s 0.5s; }
   .scale-content.is-scaled .footer .footer-logo { opacity: 1; -webkit-transition: 3s 1s; -moz-transition: 3s 1s; -o-transition: 3s 1s; transition: 3s 1s; }
@@ -807,8 +808,6 @@ body { background-color: #183840; position: relative; }
 .back-to-top-wrap .back-to-top { display: block; width: 48px; height: 48px; margin: 0 0 0 auto; font-size: 15px; line-height: 48px; text-align: center; color: white; background-color: rgba(85, 179, 108, 0.8); -webkit-border-radius: 3px 0 0 3px; -moz-border-radius: 3px 0 0 3px; -ms-border-radius: 3px 0 0 3px; -o-border-radius: 3px 0 0 3px; border-radius: 3px 0 0 3px; -webkit-transition: background-color 0.5s; -moz-transition: background-color 0.5s; -o-transition: background-color 0.5s; transition: background-color 0.5s; }
 .back-to-top-wrap .back-to-top:hover { background-color: rgba(85, 179, 108, 0.6); text-decoration: none; }
 @media (min-width: 1512px) { .back-to-top-wrap { width: 90%; } }
-
-.is-scaled .back-to-top-wrap { opacity: 0; bottom: -48px; -webkit-transition: opacity 0s, bottom 0s; -moz-transition: opacity 0s, bottom 0s; -o-transition: opacity 0s, bottom 0s; transition: opacity 0s, bottom 0s; }
 
 .homepage .header-sticky-wrapper { position: absolute; top: 0; left: 0; right: 0; }
 .homepage .header, .homepage .sub-menu { width: 100%; }
