--- a/sass/partial/_article.scss
+++ b/sass/partial/_article.scss
@@ -3,35 +3,66 @@
   .lead {
     @include leader(0);
   }
-
   h3 {
     @include trailer(1);
     @include adjust-font-size-to(21px, 1);
     color: black;
     font-weight: bold;
   }
-
   h4 {
     @include trailer(1);
     @include adjust-font-size-to(16px);
     color: black;
     font-weight: bold;
   }
-
+  p {
+    @include adjust-font-size-to(16px);
+  }
+  blockquote {
+    position: relative;
+    @include adjust-font-size-to(16px);
+    color: $color-secondary;
+    border: none;
+    padding: 0 24px;
+    text-align: center;
+    &:before, &:after {
+      position: absolute;
+      display: block;
+      color: #ccc;
+      @include opacity(0.125);
+    }
+    &:before {
+      content: '“';
+      top: 0;
+      left: 0;
+      @include replace-text-with-svg(quote);
+      width: 18px;
+      height: 24px;
+    }
+    &:after {
+      content: '”';
+      bottom: 0;
+      right: 0;
+      @include replace-text-with-svg(quote2);
+      width: 18px;
+      height: 24px;
+    }
+  }
   b {
     color: black;
     font-weight: bold;
   }
-
   img, iframe {
     display: block;
     width: 100%;
     @include trailer(1);
   }
-
   ul, ol {
     @include leader(0);
     @include adjust-font-size-to(18px, 1.25);
+    ul, ol {
+      @include trailer(0);
+    }
   }
 
 
@@ -39,11 +70,32 @@
 
     @include adjust-font-size-to(18px, 1.25);
 
+    h3, h4, p, img, iframe, ul, ol {
+      @include trailer(1.25);
+    }
     h3 {
       @include adjust-font-size-to(24px, 1.2);
     }
     h4 {
       @include adjust-font-size-to(18px, 1.25);
+    }
+    blockquote {
+      @include adjust-font-size-to(18px, 1.25);
+      margin: 0 12.5% rhythm(1);
+      // margin: rhythm(0) auto rhythm(1.25);
+      padding: 0 30px;
+      &:before {
+        content: '“';
+        width: 24px;
+        height: 30px;
+      }
+      &:after {
+        content: '”';
+        bottom: 0;
+        right: 0;
+        width: 24px;
+        height: 30px;
+      }
     }
     p {
       @include adjust-font-size-to(18px, 1.25);
