--- a/sass/partial/_content.scss
+++ b/sass/partial/_content.scss
@@ -3,17 +3,22 @@
     padding-top: 24px;
     margin-top: -24px;
   }
+  @include at-breakpoint($pad) {
+    padding-top: 30px;
+    margin-top: -30px;
+  }
+
   @include at-breakpoint($desktop) {
     padding-top: 61px;
     .anchor {
-      padding-top: 61px + 24px;
-      margin-top: -(61px + 24px);
+      padding-top: 61px + 30px;
+      margin-top: -(61px + 30px);
     }
     &.has-sub-menu {
       padding-top: 110px;
       .anchor {
-        padding-top: 110px + 24px;
-        margin-top: -(110px + 24px);
+        padding-top: 110px + 30px;
+        margin-top: -(110px + 30px);
       }
     }
   }
