--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -633,10 +633,11 @@ body { background-color: #183840; position: relative; }
   .post-list_block-style .post-summary { font-size: 16px; line-height: 27px; } }
 
 .content .anchor { padding-top: 24px; margin-top: -24px; }
+@media (min-width: 640px) { .content { padding-top: 30px; margin-top: -30px; } }
 @media (min-width: 1025px) { .content { padding-top: 61px; }
-  .content .anchor { padding-top: 85px; margin-top: -85px; }
+  .content .anchor { padding-top: 91px; margin-top: -91px; }
   .content.has-sub-menu { padding-top: 110px; }
-  .content.has-sub-menu .anchor { padding-top: 134px; margin-top: -134px; } }
+  .content.has-sub-menu .anchor { padding-top: 140px; margin-top: -140px; } }
 
 .site-info { display: none; }
 @media (min-width: 1025px) { .site-info { padding: 24px 0; text-align: center; }
@@ -756,12 +757,22 @@ body { background-color: #183840; position: relative; }
 .article .lead { margin-top: 0px; }
 .article h3 { margin-bottom: 24px; font-size: 21px; line-height: 24px; color: black; font-weight: bold; }
 .article h4 { margin-bottom: 24px; font-size: 16px; line-height: 24px; color: black; font-weight: bold; }
+.article p { font-size: 16px; line-height: 24px; }
+.article blockquote { position: relative; font-size: 16px; line-height: 24px; color: #3ca59a; border: none; padding: 0 24px; text-align: center; }
+.article blockquote:before, .article blockquote:after { position: absolute; display: block; color: #ccc; opacity: 0.125; }
+.article blockquote:before { content: '“'; top: 0; left: 0; text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/quote.png?1439466909'); background-repeat: no-repeat; background-position: 50% 50%; width: 26px; height: 18px; background-image: none, url('/images/quote.svg?1439466909'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; width: 18px; height: 24px; }
+.article blockquote:after { content: '”'; bottom: 0; right: 0; text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/quote2.png?1439466908'); background-repeat: no-repeat; background-position: 50% 50%; width: 26px; height: 18px; background-image: none, url('/images/quote2.svg?1439466909'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; width: 18px; height: 24px; }
 .article b { color: black; font-weight: bold; }
 .article img, .article iframe { display: block; width: 100%; margin-bottom: 24px; }
 .article ul, .article ol { margin-top: 0px; font-size: 18px; line-height: 30px; }
+.article ul ul, .article ul ol, .article ol ul, .article ol ol { margin-bottom: 0px; }
 @media (min-width: 640px) { .article { font-size: 18px; line-height: 30px; }
+  .article h3, .article h4, .article p, .article img, .article iframe, .article ul, .article ol { margin-bottom: 30px; }
   .article h3 { font-size: 24px; line-height: 28px; }
   .article h4 { font-size: 18px; line-height: 30px; }
+  .article blockquote { font-size: 18px; line-height: 30px; margin: 0 12.5% 24px; padding: 0 30px; }
+  .article blockquote:before { content: '“'; width: 24px; height: 30px; }
+  .article blockquote:after { content: '”'; bottom: 0; right: 0; width: 24px; height: 30px; }
   .article p { font-size: 18px; line-height: 30px; }
   .article ul, .article ol { font-size: 18px; line-height: 30px; } }
 
@@ -805,8 +816,8 @@ body { background-color: #183840; position: relative; }
 
 .back-to-top-wrap { visibility: hidden; display: block; position: fixed; bottom: -48px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; max-width: 1512px; width: 100%; margin: 0 auto; opacity: 0; -webkit-transition: visibility 0s, opacity 0.5s, bottom 0.5s; -webkit-transition-delay: 0.5s, 0s, 0s; -moz-transition: visibility 0s 0.5s, opacity 0.5s, bottom 0.5s; -o-transition: visibility 0s 0.5s, opacity 0.5s, bottom 0.5s; transition: visibility 0s 0.5s, opacity 0.5s, bottom 0.5s; }
 .back-to-top-wrap.is-active { visibility: visible; opacity: 1; bottom: 24px; -webkit-transition: opacity 0.5s, bottom 0.5s; -webkit-transition-delay: 0.5s, 0.5s; -moz-transition: opacity 0.5s 0.5s, bottom 0.5s 0.5s; -o-transition: opacity 0.5s 0.5s, bottom 0.5s 0.5s; transition: opacity 0.5s 0.5s, bottom 0.5s 0.5s; }
-.back-to-top-wrap .back-to-top { display: block; width: 48px; height: 48px; margin: 0 0 0 auto; font-size: 15px; line-height: 48px; text-align: center; color: white; background-color: rgba(85, 179, 108, 0.8); -webkit-border-radius: 3px 0 0 3px; -moz-border-radius: 3px 0 0 3px; -ms-border-radius: 3px 0 0 3px; -o-border-radius: 3px 0 0 3px; border-radius: 3px 0 0 3px; -webkit-transition: background-color 0.5s; -moz-transition: background-color 0.5s; -o-transition: background-color 0.5s; transition: background-color 0.5s; }
-.back-to-top-wrap .back-to-top:hover { background-color: rgba(85, 179, 108, 0.6); text-decoration: none; }
+.back-to-top-wrap .back-to-top { display: block; width: 48px; height: 48px; margin: 0 0 0 auto; font-size: 15px; line-height: 48px; text-align: center; color: white; background-color: rgba(80, 181, 132, 0.8); -webkit-border-radius: 3px 0 0 3px; -moz-border-radius: 3px 0 0 3px; -ms-border-radius: 3px 0 0 3px; -o-border-radius: 3px 0 0 3px; border-radius: 3px 0 0 3px; -webkit-transition: background-color 0.5s; -moz-transition: background-color 0.5s; -o-transition: background-color 0.5s; transition: background-color 0.5s; }
+.back-to-top-wrap .back-to-top:hover { background-color: rgba(80, 181, 132, 0.6); text-decoration: none; }
 @media (min-width: 1512px) { .back-to-top-wrap { width: 90%; } }
 
 .homepage .header-sticky-wrapper { position: absolute; top: 0; left: 0; right: 0; }
