--- a/partial/_demo-article.html.slim
+++ b/partial/_demo-article.html.slim
@@ -9,7 +9,11 @@ p= zh_lorem_paragraphs(2)
 h4 這是一段文章次標題
 p= zh_lorem_paragraphs(2)
 p: a href="#test" 點擊我跳轉到標題四
-img src="http://placehold.it/900x600"
+p= zh_lorem_paragraphs(2)
+figure
+  img src="http://placehold.it/900x600"
+  figcaption= zh_lorem_sentence
+p= zh_lorem_paragraphs(2)
 h3 這是一段文章標題
 ul
   li= zh_lorem_sentence
