新增 macho js 解決漏字問題

--- a/posts/single-post-page.html.slim
+++ b/posts/single-post-page.html.slim
@@ -9,8 +9,8 @@
           // 若出現兩者以上議題的架構
           / li: a href="/categories/show.html" 活動
           / li: a href="/categories/show.html" 政策
-        h2.post-title 開創一個真正屬於人民的時代
-        h3.post-subtitle 本文為蔡英文於華府智庫「戰略與國際研究中心（CSIS）」之演講
+        h2.post-title.auto-break-text 開創一個真正屬於人民的時代
+        h3.post-subtitle.auto-break-text 本文為蔡英文於華府智庫「戰略與國際研究中心（CSIS）」之演講
     .container.container_single-article
       .post-share
         span.post-share-title 分享：
