--- a/partial/_hero.html.slim
+++ b/partial/_hero.html.slim
@@ -4,25 +4,25 @@
       a.hero-block.large style="background-image: url('/images/hero-1.jpg')"  href="/posts/"
         .hero-block-title
           .hero-block-title-inner
-            .title 人民期待有責任，有方向感的政府
-            .description 這是一段文字敘述，可以寫大約60字左右，超過會沒辦法顯示，建議在25到55字之間。這是一段文字敘述。
+            .title.auto-break-text 人民期待有責任，有方向感的政府
+            .description.auto-break-text 這是一段文字敘述，可以寫大約60字左右，超過會沒辦法顯示，建議在25到55字之間。這是一段文字敘述。
   .hero-wrap-right
     .hero-wrap-inner
       .hero-block-wrap
         a.hero-block.small style="background-image: url('/images/hero-2.jpg')" href="http://melody.iing.tw" target="_blank"
           .hero-block-title
             .hero-block-title-inner
-              .title 台灣美樂地
-              .description 這是一段文字敘述，可以寫大約50字左右，超過會沒辦法顯示
+              .title.auto-break-text 台灣美樂地
+              .description.auto-break-text 這是一段文字敘述，可以寫大約50字左右，超過會沒辦法顯示
       .hero-block-wrap
         a.hero-block.small style="background-image: url('/images/hero-3.jpg')" href="http://donate.iing.tw" target="_blank"
           .hero-block-title
             .hero-block-title-inner
-              .title 小額捐款
-              .description 這是一段文字敘述
+              .title.auto-break-text 小額捐款
+              .description.auto-break-text 這是一段文字敘述
     .hero-block-wrap
       a.hero-block.medium style="background-image: url('/images/hero-4.jpg')" href="http://light.iing.tw" target="_blank"
         .hero-block-title
           .hero-block-title-inner
-            .title 在地希望生活節
-            .description 這是一段文字敘述，可以寫大約50字左右，超過會沒辦法顯示，建議在25到55字之間。這是一段文字敘述。
+            .title.auto-break-text 在地希望生活節
+            .description.auto-break-text 這是一段文字敘述，可以寫大約50字左右，超過會沒辦法顯示，建議在25到55字之間。這是一段文字敘述。
