將社群相關連結設定為開新視窗

--- a/partial/_header.html.slim
+++ b/partial/_header.html.slim
@@ -20,6 +20,6 @@
             label.search-icon.icon-search
             input.search-input placeholder="搜尋"
           ul.social-nav
-            li: a.facebook.icon-facebook href="#"
-            li: a.instagra.icon-instagram href="#"
-            li: a.line.icon-line href="#"
+            li: a.facebook.icon-facebook href="#" target="_blank"
+            li: a.instagra.icon-instagram href="#" target="_blank"
+            li: a.line.icon-line href="#" target="_blank"
