--- a/posts/single-post-page.html.slim
+++ b/posts/single-post-page.html.slim
@@ -14,10 +14,10 @@
     .container.container_single-article
       .post-share
         span.post-share-title 分享：
-        a.post-share-btn.icon-facebook href="#"
-        a.post-share-btn.icon-twitter href="#"
-        a.post-share-btn.icon-plurk href="#"
-        a.post-share-btn.icon-line href="#"
+        a.post-share-btn.icon-facebook href="#" target="_blank"
+        a.post-share-btn.icon-twitter href="#" target="_blank"
+        a.post-share-btn.icon-plurk href="#" target="_blank"
+        a.post-share-btn.icon-line href="#" target="_blank"
       .post-meta
         span.post-date 2015.7.23
         - (rand(5) + 1).times do |i|
@@ -27,10 +27,10 @@
       .post-footer
         .post-share
           span.post-share-title 分享：
-          a.post-share-btn.icon-facebook href="#"
-          a.post-share-btn.icon-twitter href="#"
-          a.post-share-btn.icon-plurk href="#"
-          a.post-share-btn.icon-line href="#"
+          a.post-share-btn.icon-facebook href="#" target="_blank"
+          a.post-share-btn.icon-twitter href="#" target="_blank"
+          a.post-share-btn.icon-plurk href="#" target="_blank"
+          a.post-share-btn.icon-line href="#" target="_blank"
           / img.post-fb-like src="/images/fb-like.png"
         / .pager
         /   a.pager-item.prev href="#": .pager-title 上一篇
