--- a/sass/partial/_post-list.scss
+++ b/sass/partial/_post-list.scss
@@ -16,7 +16,7 @@
     margin: 0 -24px 12px;
     width: auto;
     padding-top: 67%;
-    background-color: #eee;
+    background-color: #50B584;
   }
 
   .post-item {
